packages/infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    app.kubernetes.io/component: controller
    name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernets.io/use-regex: "true"
spec:
  rules:
    # replace with real hosted site
    - host: roms.com
      http:
        paths:
          - pathType: Prefix
            path: "/api/users/?(.*)"
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000

          # always should be in the end
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
